# calendar_bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.sample.toml  database.sql
.github/workflows/: deploy-image.yml  tests.yml
res/: base.css  base.js  calendar.html.j2  calendars.html.j2  change_matrix_id.html.j2  change_password.html.j2  event.html.j2  events.html.j2  list_google_accounts.html.j2  list_google_calendars.html.j2  list_google_calendars.j2  login.html.j2  reminder.html.j2  sidebar.html  sidebar.html.j2
src/: app.rs  auth.rs  calendar.rs  config.rs  database.rs  lib.rs  main.rs  site.rs
src/res/: event.html.j2  events.html.j2
tests/: auth.rs  password_calendar.rs  simple.rs
tests/common/: mod.rs
