[package]
name = "calendar_bot"
version = "0.1.0"
authors = ["Erik Johnston <cargo@jki.re>"]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.15"
ammonia = "3.2.1"
anyhow = "1.0.38"
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
bcrypt = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-humanize = "0.2.2"
clap = { version = "4.4.1", features = ["cargo"] }
comrak = "0.18.0"
futures = "0.3.12"
handlebars = "4.3.3"
ics_parser = { git = "https://github.com/erikjohnston/ics_parser", branch = "main" }
itertools = "0.11.0"
oauth2 = "4.2.0"
openidconnect = "3.3.0"
postgres-types = { version = "0.2.0", features = ["derive"] }
rand = "0.8.3"
reqwest = { version = "0.11.0", features = ["json"] }
roxmltree = "0.18.0"
sentry = { version = "0.31.0", features = ["anyhow"] }
sentry-tracing = "0.31.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
tera = "1.19.0"
time = "0.3.5"
tokio = { version = "1.2", features = ["full"] }
tokio-postgres = { version = "0.7.0", features = ["with-chrono-0_4"] }
toml = "0.7.6"
tracing = "0.1.23"
tracing-actix-web = "0.7.0"
tracing-subscriber = { version = "0.3.1", features = ["json", "env-filter"] }
url = "2.2.2"
urlencoding = "2.1.0"

[profile.release]
debug = true
