[package]
name = "calendar_bot"
version = "0.1.0"
authors = ["Erik Johnston <cargo@jki.re>"]
edition = "2018"

[dependencies]
actix-http = "3.8.0"
actix-web = { version = "4.8.0", features = ["cookies"] }
ammonia = "3.3.0"
anyhow = "1.0.86"
bb8 = "0.8.5"
bb8-postgres = "0.8.1"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-humanize = "0.2.3"
clap = { version = "4.5.7", features = ["cargo"] }
comrak = "0.18.0"
futures = "0.3.30"
handlebars = "4.5.0"
ics_parser = { git = "https://github.com/erikjohnston/ics_parser", branch = "main" }
itertools = "0.11.0"
oauth2 = "4.4.2"
openidconnect = "3.5.0"
postgres-types = { version = "0.2.6", features = ["derive"] }
rand = "0.8.5"
reqwest = { version = "0.11.27", features = ["json"] }
roxmltree = "0.18.1"
sentry = { version = "0.31.8", features = ["anyhow", "debug-images"] }
sentry-tracing = "0.31.8"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tera = "1.20.0"
time = "0.3.36"
tokio = { version = "1.38", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
toml = "0.7.8"
tracing = "0.1.40"
tracing-actix-web = "0.7.11"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
url = "2.5.2"
urlencoding = "2.1.3"

[profile.release]
debug = true

[dev-dependencies]
httptest = "0.16.1"
pgtemp = "0.3.0"
scraper = "0.19.1"
test-log = { version = "0.2.16", features = [
    "color",
    "trace",
], default-features = false }
